fix for header z-index

--- a/sites/all/themes/naacc/assets/scss/app.scss
+++ b/sites/all/themes/naacc/assets/scss/app.scss
@@ -41,6 +41,8 @@ header, footer {
 //
 header {
   background-color: $blue;
+  position: relative;
+  z-index: 2;
   .outer-container {
     padding:0;
   }
